# topdownr 1.5
- New version for Bioc 3.9 (devel)

Changes in version 1.5.4
- Fix for internal `.makeRowNames` on `DataFrame` without any `numeric` columns.
- Fix unit test that uses `set.seed` (order changed during R-devel upgrade).

Changes in version 1.5.3
- biocViews: ImmunoOncology added by
  Kayla-Morrell <kayla.morrell@roswellpark.org> [2019-01-04].

Changes in version 1.5.2
- Add `expandMs1Conditions`, `expandTms2Conditions`,
  `createExperimentsFragmentOptimisation` functions to allow more flexibility
  in method creation; see also #77 [2018-12-07].
- Modify interface/arguments of `writeMethodXmls` to adapt to new method
  creation workflow (the old interface will be defunct in Bioconductor 3.10 and
  removed in 3.11) [2018-12-07].
- Adapt the `data-generation` vignette to the new workflow [2018-12-07].
- Deprecated `defaultMs1Settings` and `defaultMs2Settings`. They will be
  defunct in Bioconductor 3.10 and removed in 3.11 [2018-12-07].

Changes in version 1.5.1
- `readTopDownFiles` gains the argument `conditions` to control wheter
  "FilterStrings" or a given number of conditions is used to create condition
  IDs; see #77 [2018-11-07].

# topdownr 1.4
- New version for Bioc 3.8 (release)

# topdownr 1.3

Changes in version 1.3.6
- Add Pavel's and Ole's ORCID to DESCRIPTION [2018-10-23].

Changes in version 1.3.5
- Fix format of roxygen links to foreign packages to avoid link warning in
  `R CMD check` [2018-10-10].

Changes in version 1.3.4
- Add inst/CITATION file [2018-09-26].

Changes in version 1.3.3
- Revert commit c6e8dfd: "Adapt to `MSnbase 2.7.2` with internal fragments; see
    #82 [2018-06-03]."

Changes in version 1.3.2
- Use `BiocManager::install` [2018-07-16].

Changes in version 1.3.1
- Adapt to `MSnbase 2.7.2` with internal fragments; see
    #82 [2018-06-03].
- Fix `FragmentViews` start/end/width and labels for internal fragments
    [2018-06-03].
- Fix `as(tds, "MSnSet")` unit test [2018-07-06].